--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ subprojects {
 
         // Dependency Versions
         sparkVersion = "3.3.2"
+        hapiVersion = "6.4.1"
     }
 
     compileJava {
