--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,2 @@
-plugins {
-}
-
 rootProject.name = 'gov-va-sparkcql'
-include 'sparkcql-core', 'sparkcql-fhir', 'sparkcql-fhir-synthetic', 'sparkcql-qdm'
+include 'sparkcql-core', 'sparkcql-core-shadow', 'sparkcql-fhir', 'sparkcql-fhir-synthetic'
