--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-rootProject.name = 'gov-va-sparkcql'
+rootProject.name = 'sparkcql'
 include 'sparkcql-core', 'sparkcql-core-shadow', 'sparkcql-fhir', 'sparkcql-fhir-synthetic'
