--- a/sparkcql-core/build.gradle
+++ b/sparkcql-core/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation project(path: ':sparkcql-core-shadow', configuration: 'shadow')
+    //implementation "gov.va.sparkcql:sparkcql-core-shadow:${projectVersion}"
     testImplementation project(":sparkcql-fhir-synthetic")
 
     implementation "org.apache.spark:spark-core_2.12:${sparkVersion}"
@@ -8,9 +9,11 @@ dependencies {
     implementation "org.json4s:json4s-native_2.12:3.7.0-M11"
     implementation "org.json4s:json4s-jackson_2.12:3.7.0-M11"
     
+    // No references can be made to CQF components which have transitive dependencies 
+    // to ANTLR due to version compatibility issues. Those references must be isolated
+    // in sparkcql-core-shadow. For instance, cql, cql-to-elm, elm-fhir, engine, etc.
     implementation "info.cqframework:elm:${cqfVersion}"
     implementation "info.cqframework:elm-jackson:${cqfVersion}"
-    implementation "info.cqframework:model-jackson:${cqfVersion}"
     implementation "info.cqframework:model-jackson:${cqfVersion}"
     implementation "org.fhir:ucum:${ucumVersion}"
 
