--- a/sparkcql-fhir/build.gradle
+++ b/sparkcql-fhir/build.gradle
@@ -1,5 +1,3 @@
 dependencies {
-    //compile project(':sparkcql-core')
+    implementation project(':sparkcql-core')
 }
-
-//include ':sparkcql-core'
