--- a/sparkcql-fhir/build.gradle
+++ b/sparkcql-fhir/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
     implementation project(':sparkcql-core')
+    implementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
 }
