--- a/sparkcql-fhir/build.gradle
+++ b/sparkcql-fhir/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     implementation project(':sparkcql-core')
+    implementation "org.apache.spark:spark-core_2.12:${sparkVersion}"
     implementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
 }
