Model organization improvements, basic typing.

--- a/sparkcql-core/build.gradle
+++ b/sparkcql-core/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 
     testImplementation "info.cqframework:quick:${cqfVersion}"
     testImplementation "info.cqframework:qdm:${cqfVersion}"
-    testImplementation project(":sparkcql-fhir")
+    testImplementation project(":sparkcql-model-fhir")
     testImplementation project(":sparkcql-synthea")
 }
 
