--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,7 @@ hapiVersion=6.4.1
 cqfVersion=2.8.0
 ucumVersion=1.0.3
 json4sVersion=3.7.0-M11
+slf4jVersion=1.7.33
+
+# Build Settings
+org.gradle.console=rich
