--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ subprojects {
 
     repositories {
         mavenCentral()
-        mavenLocal()        // to pick up sparkcql-core-shadow
+        mavenLocal()        // to pick up sparkcql-shadow
     }
 
     dependencies {
