--- a/sparkcql-core/build.gradle
+++ b/sparkcql-core/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    implementation("gov.va.sparkcql:sparkcql-core-shadow:${version}") {
+    implementation("gov.va.sparkcql:sparkcql-shadow:${version}") {
         // Shadow already embeds all transitive dependencies but without explicitly excluding
         // ANTLR Gradle will upgrade spark's ANTLR to a higher, incompatible version. Alternatively,
         // we could strictly define ANTLR's correct version but this might break in the future if 
@@ -16,7 +16,7 @@ dependencies {
     
     // No references can be made to CQF components which have transitive dependencies 
     // to ANTLR due to version compatibility issues. Those references must be isolated
-    // in sparkcql-core-shadow. For instance, cql, cql-to-elm, elm-fhir, engine, etc.
+    // in sparkcql-shadow. For instance, cql, cql-to-elm, elm-fhir, engine, etc.
     implementation "info.cqframework:elm:${cqfVersion}"
     implementation "info.cqframework:elm-jackson:${cqfVersion}"
     implementation "info.cqframework:model-jackson:${cqfVersion}"
@@ -25,7 +25,7 @@ dependencies {
     testImplementation "info.cqframework:qdm:${cqfVersion}"
 }
 
-// Forces sparkcql-core-shadow to deploy jar to local maven repo where we'll pick it up
+// Forces sparkcql-shadow to deploy jar to local maven repo where we'll pick it up
 compileJava {
-    dependsOn(':sparkcql-core-shadow:publishToMavenLocal')
+    dependsOn(':sparkcql-shadow:publishToMavenLocal')
 }
