--- a/sparkcql-core/build.gradle
+++ b/sparkcql-core/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     implementation "info.cqframework:elm:${cqfVersion}"
     implementation "info.cqframework:elm-jackson:${cqfVersion}"
     implementation "info.cqframework:model-jackson:${cqfVersion}"
+
+    testImplementation "info.cqframework:quick:${cqfVersion}"
+    testImplementation "info.cqframework:qdm:${cqfVersion}"
 }
 
 // Forces sparkcql-shadow to deploy jar to local maven repo where we'll pick it up
