Pathlings schema, dropped most core types.

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,7 @@ cqfVersion=2.8.0
 ucumVersion=1.0.3
 json4sVersion=3.7.0-M11
 slf4jVersion=1.7.33
+pathlingVersion=6.1.4
 
 # Build Settings
 org.gradle.console=rich
