--- a/build.gradle
+++ b/build.gradle
@@ -52,4 +52,10 @@ subprojects {
             '--add-opens=java.base/sun.util.calendar=ALL-UNNAMED'      
         ]
     }
+
+    configurations.all {
+        resolutionStrategy { 
+            force 'com.fasterxml.jackson.core:jackson-databind:2.14.3'      // resolves conflict w/ Pathling & HAPI 
+        }
+    }
 }
