--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 subprojects {
     apply plugin: 'java-library'
     apply plugin: 'maven-publish'
-
+    apply plugin: 'eclipse'
+    
     compileJava {
         sourceCompatibility = "${targetJavaVersion}"
         targetCompatibility = "${targetJavaVersion}"
@@ -35,6 +36,7 @@ subprojects {
         }
 
         jvmArgs = [
+            '-Xmx6g',
             // https://stackoverflow.com/questions/73465937/apache-spark-3-3-0-breaks-on-java-17-with-cannot-access-class-sun-nio-ch-direct
             '--add-opens=java.base/java.lang=ALL-UNNAMED',
             '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
