--- a/sparkcql-core/build.gradle
+++ b/sparkcql-core/build.gradle
@@ -1,12 +1,14 @@
 dependencies {
-    implementation (project(path: ':sparkcql-cqf', configuration: 'shadow'))
-    
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
 
     implementation "org.apache.spark:spark-core_2.12:${sparkVersion}"
     implementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
     
-    // No references can be made to CQF components due to transitive dependencies
-    // to a Spark incompatible ANTLR version (4.8 versus 4.10.1). CQF references
-    // are made through sparkcql-cqf which is a shadowed fat jar.
+    /*
+    The only reference to Clinical Quality Framework (CQF) should be ELM because:
+    1. CQF and Spark both use ANTLR but ANTLR versions (e.g. 4.8 vs 4.10.1).
+    2. SparkCQL abstracts the interfaces required by a CQL implementation and 
+       sparkcql-cqf provides that implementation.
+    */
+    implementation "info.cqframework:elm:${cqfVersion}"
 }
