--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
 rootProject.name = 'sparkcql'
-include 'sparkcql-cqf', 'sparkcql-core', 'sparkcql-fhir', 'sparkcql-synthetic', 'sparkcql-test'
+include 'sparkcql-core', 'sparkcql-cqf', 'sparkcql-fhir', 'sparkcql-synthetic', 'sparkcql-test'
