--- a/sparkcql-test/build.gradle
+++ b/sparkcql-test/build.gradle
@@ -1,7 +1,9 @@
 dependencies {
+    testImplementation project(":sparkcql-cqf")
+
     testImplementation project(":sparkcql-core")
-    testImplementation project(":sparkcql-fhir")
-    testImplementation project(":sparkcql-synthetic")
+    // testImplementation project(":sparkcql-fhir")
+    // testImplementation project(":sparkcql-synthetic")
 
     testImplementation "org.apache.spark:spark-core_2.12:${sparkVersion}"
     testImplementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
