Initial Guice implementation.

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ cqfVersion=2.11.0
 hapiVersion=6.4.1
 junitVersion=5.9.3
 pathlingVersion=6.1.4
+guiceVersion=7.0.0
 slf4jVersion=1.7.33
 sparkVersion=3.3.2
 ucumVersion=1.0.3
