--- a/sparkcql-fhir/build.gradle
+++ b/sparkcql-fhir/build.gradle
@@ -1,5 +1,8 @@
 dependencies {
     implementation project(':sparkcql-core')
+
+    implementation "com.google.inject:guice:${guiceVersion}"
+    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     
     implementation "org.apache.spark:spark-core_2.12:${sparkVersion}"
     implementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
