--- a/sparkcql-synthetic/build.gradle
+++ b/sparkcql-synthetic/build.gradle
@@ -3,9 +3,11 @@ dependencies {
     implementation project(":sparkcql-fhir")
 
     implementation "com.google.inject:guice:${guiceVersion}"
-
+    implementation "org.slf4j:slf4j-api:${slf4jVersion}"
+    
     implementation "org.apache.spark:spark-core_2.12:${sparkVersion}"
     implementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
     
     implementation "info.cqframework:elm:${cqfVersion}"
+    implementation "ca.uhn.hapi.fhir:hapi-fhir-structures-r4:${hapiVersion}"
 }
