--- a/sparkcql-fhir/build.gradle
+++ b/sparkcql-fhir/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     implementation project(':sparkcql-core')
+    testImplementation project(path: ":sparkcql-cqf", configuration: "shadow")
 
     implementation "com.google.inject:guice:${guiceVersion}"
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
