--- a/sparkcql-cqf/build.gradle
+++ b/sparkcql-cqf/build.gradle
@@ -18,27 +18,25 @@ dependencies {
 
 shadowJar {
     relocate 'org.antlr.v4', 'shadow.org.antlr.v4'
-    // archiveBaseName.set('shadow')
-    // archiveClassifier.set('')
-    // archiveVersion.set('') 
-    zip64 = true
     dependencies {
-        include(dependency("info.cqframework:"))
-        // exclude(project(':sparkcql-core'))
-        // exclude(dependency("com.google.*:"))
-        // exclude(dependency("com.ibm.*:"))
-        // exclude(dependency("com.ctc.*:"))
-        // exclude(dependency("com.univocity.*:"))
-        // exclude(dependency("com.isotericsoftware.*:"))
-        // exclude(dependency("com.twitter.*:"))
-        // exclude(dependency("org.apache.*:"))
-        // exclude(dependency("org.glassfish.*:"))
-        // exclude(dependency("org.json4s.*:"))
-        // exclude(dependency("org.xerial.*:"))
-        // exclude(dependency("scala.*:"))
-        // exclude(dependency("scala*:"))
-        // exclude(dependency("scala.collection.*:"))
-        // exclude(dependency("linux.*:"))
-        // exclude(dependency("io.*:"))
+        // include(dependency("info.cqframework:"))
+        // include(dependency(":sparkcql-core"))
+        // include(dependency("shadow.org.antlr.v4:"))
+        exclude(project(':sparkcql-core'))
+        exclude(dependency("com.google.*:"))
+        exclude(dependency("com.ibm.*:"))
+        exclude(dependency("com.ctc.*:"))
+        exclude(dependency("com.univocity.*:"))
+        exclude(dependency("com.isotericsoftware.*:"))
+        exclude(dependency("com.twitter.*:"))
+        exclude(dependency("org.apache.*:"))
+        exclude(dependency("org.glassfish.*:"))
+        exclude(dependency("org.json4s.*:"))
+        exclude(dependency("org.xerial.*:"))
+        exclude(dependency("scala.*:"))
+        exclude(dependency("scala*:"))
+        exclude(dependency("scala.collection.*:"))
+        exclude(dependency("linux.*:"))
+        exclude(dependency("io.*:"))
     }
 }
