--- a/sparkcql-fhir/build.gradle
+++ b/sparkcql-fhir/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     implementation project(':sparkcql-core')
-    testImplementation project(path: ":sparkcql-cqf", configuration: "shadow")
+    implementation project(path: ":sparkcql-cqf", configuration: "shadow")
 
     implementation "com.google.inject:guice:${guiceVersion}"
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
@@ -11,5 +11,5 @@ dependencies {
     implementation "au.csiro.pathling:encoders:${pathlingVersion}"
     implementation "ca.uhn.hapi.fhir:hapi-fhir-structures-r4:${hapiVersion}"
     implementation "info.cqframework:elm:${cqfVersion}"
-    //testImplementation "info.cqframework:cql-to-elm:${cqfVersion}"
+    implementation "info.cqframework:quick:${cqfVersion}"
 }
