--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,10 @@
     "java.eclipse.downloadSources": true,
     "java.maven.downloadSources": true,
     "java.test.config": {
-        // "classPaths": [
-        //     "${workspaceFolder}/sparkcql-cqf/build/libs/sparkcql-cqf-1.0-SNAPSHOT-all.jar",
-        // ],
+        "classPaths": [
+            // Workaround to issue where VS Code isn't correctly adding shadow jar to classpath
+            "${workspaceFolder}/sparkcql-cqf/build/libs/sparkcql-cqf-1.0-SNAPSHOT.jar",
+        ],
         "vmArgs": [
             "--add-opens=java.base/java.lang=ALL-UNNAMED",
             "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
