--- a/gradle.properties
+++ b/gradle.properties
@@ -14,6 +14,7 @@ guiceVersion=7.0.0
 slf4jVersion=1.7.33
 sparkVersion=3.3.2
 ucumVersion=1.0.3
+mockitoVersion=5.5.0
 
 # Build Settings
 org.gradle.console=rich
