--- a/sparkcql-test/build.gradle
+++ b/sparkcql-test/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     testImplementation "info.cqframework:elm:${cqfVersion}"
     testImplementation "info.cqframework:elm-jackson:${cqfVersion}"
     testImplementation "info.cqframework:quick:${cqfVersion}"
+    testImplementation "info.cqframework:qdm:${cqfVersion}"
     testImplementation "ca.uhn.hapi.fhir:hapi-fhir-structures-r4:${hapiVersion}"
     testImplementation "au.csiro.pathling:encoders:${pathlingVersion}"
 }
