Moved common AbstractTest to shared testFixtures.

--- a/sparkcql-test/build.gradle
+++ b/sparkcql-test/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     testImplementation project(':sparkcql-core')
+    testImplementation(testFixtures(project(":sparkcql-core")))
     testImplementation project(path: ':sparkcql-cqf', configuration: 'shadow')
     testImplementation project(':sparkcql-fhir')
 
@@ -14,4 +15,5 @@ dependencies {
     testImplementation "info.cqframework:qdm:${cqfVersion}"
     testImplementation "ca.uhn.hapi.fhir:hapi-fhir-structures-r4:${hapiVersion}"
     testImplementation "au.csiro.pathling:encoders:${pathlingVersion}"
+
 }
