--- a/sparkcql-fhir/build.gradle
+++ b/sparkcql-fhir/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     implementation project(':sparkcql-core')
-    // testImplementation(testFixtures(project(":sparkcql-core")))
+    testImplementation(testFixtures(project(":sparkcql-core")))
 
     implementation "org.apache.spark:spark-core_2.12:${sparkVersion}"
     implementation "org.apache.spark:spark-sql_2.12:${sparkVersion}"
